# CMakeHelp

./: CMakeLists copy.txt  CMakeLists.txt  ProjectConfig.h.in  README.md
src/: test1.cpp
src/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
src/OptionalFunctions/: CMakeLists.txt  Optional.cpp  OptionalHeaders.h
